@@ -20,6 +20,7 @@
 	* Added implicit formula recognition on write() operations (prefix formula with '=')
 	* Added multibyte support for license name and license key (see issue #60 and README)
 	* Added default date format when writing dates
+	* Added ExcelSheet::__construct(ExcelBook $book, $name) for customized ExcelSheets
 	* Updated documentation
 
 [2014-06-03] - Version 1.0
